--- a/index.html
+++ b/index.html
@@ -9,19 +9,37 @@
 	</head>
 		<body>
 		<header>
-		<p>Cabecera</p>
+			<h1> MONUMENTO NATURAL SOTOS DE LA ALBOLAFIA</h1>
 		</header>
 		<nav>
-		</p>Barra de navegación</p>
+		<article>
+		<p>Fauna</p>
+		</article>
+		<article>
+		<p>Vegetación</p>
+		</article>
+		<article>
+		<p>Puente Romano</p>
+		</article>
+		<article>
+		<p>Molinos</p>
+		</article>
 		</nav>
 	<section> 
-		<p>Información personal</p>
+			<h1>Información personal</h1>
+			<p>El Guadalquivir al cruzar Córdoba configura este espacio natural, conservado en pleno núcleo urbano. La prolongada ausencia de intervención humana permitió que la sedimentación fluvial originara característicos sotos, islotes de limos y arenas, colonizados por vegetación y por una variada fauna. </p>
+			<p>Del puente romano al de San Rafael, los retazos del bosque de ribera, abundante en el pasado, constituyen un pequeño espacio con una variada avifauna, compuesta por unas 120 especies. Siendo la mayoría aves protegidas, unas lo utilizan como zona de invernada, otras estacionalmente o como descanso migratorio. Destacan las abundantes garcillas bueyeras, garceta común y garza real, próximas al agua donde se alimentan, además, del martinete y la cigüeña blanca. Bajando las escaleras hasta el agua, o en barca, es frecuente ver ánades reales y frisos, gallinetas y fochas comunes, alimentados por plantas flotantes como la lenteja acuática. Entre eneas, juncos y carrizos aparecen calamones y chorlitejos. También existen especies marinas, como gaviotas y cormoranes, que duermen sobre los eucaliptos. Bajo álamos y sauces crecen el lirio amarillo y la menta de agua, junto a abundantes tarajes y floridas adelfas. Con suerte se observará descendiendo en picado al colorido martín pescador, haciendo honor a su nombre.</p>
 	</section>
 	<aside> 
-		<p>Barra lateral</p>
+			<h1>Barra lateral</h1>
+			<article> <p>Actividades</p> </article>
+			<article> <p>Mapa</p> </article>
+			<article> <p>Publicaciones</p> </article>
+			<article> <p>Álbum</p> </article>
 	</aside>
 	<footer> 
-		<p>Institucional</p>
+			<p>David Toro Martínez</p>
+			<p id="fecha">19/03/2019</p>
 	</footer>
 </body>
 </html>
